climates table, foreign key and controller
