# app/Http/Resources/ClimateCollection.php
@@ -14,11 +14,6 @@ class ClimateCollection extends ResourceCollection
      */
     public function toArray($request)
     {
-        //returns array of climates
-        return [
-            'data' => $this->collection,
-            'version' => '1.0.0',
-            'author' => 'Ugne Sipaviciute',
-        ];
+        return parent::toArray($request);
     }
 }
