# storage/api-docs/api-docs.json
@@ -68,118 +68,12 @@
                 }
             }
         },
-        "/api/climates": {
-            "get": {
-                "tags": [
-                    "Climates"
-                ],
-                "summary": "Display a listing of the resource.",
-                "description": "Displays all the climates",
-                "operationId": "2937de7c8f1d4e1228930c6332c3f79a",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation, Returns a list of Climates in JSON format"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            }
-        },
-        "/api/climates/{id}": {
-            "get": {
-                "tags": [
-                    "Climates"
-                ],
-                "summary": "Display the specified resource.",
-                "description": "Gets a climate by ID",
-                "operationId": "7987fadc8afc3a41c3d064f096ccf5d4",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Climate id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            }
-        },
         "/": {
             "get": {
                 "description": "Home Page",
                 "responses": {
                     "default": {
                         "description": "Welcome page"
-                    }
-                }
-            }
-        },
-        "/api/maintenance_ratings": {
-            "get": {
-                "tags": [
-                    "MaintenanceRating"
-                ],
-                "summary": "Display a listing of the resource.",
-                "description": "Displays all the Maintenace Rating",
-                "operationId": "65d7bb2a4392808708847a04d3af8a76",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation, Returns a list of Climates in JSON format"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            }
-        },
-        "/api/maintenance_ratings/{id}": {
-            "get": {
-                "tags": [
-                    "MaintenanceRating"
-                ],
-                "summary": "Display the specified resource.",
-                "description": "Gets a maintenance rating by ID",
-                "operationId": "d85beaeba240fe32b2f881e7fca78f6a",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Maintenance rating id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
                     }
                 }
             }
@@ -220,8 +114,7 @@
                                     "name",
                                     "category",
                                     "origin",
-                                    "climate",
-                                    "mainenace_rating",
+                                    "climate_id",
                                     "description"
                                 ],
                                 "properties": {
@@ -235,20 +128,15 @@
                                         "format": "string",
                                         "example": "House Plant"
                                     },
+                                    "climate_id": {
+                                        "type": "integer",
+                                        "format": "integer",
+                                        "example": "3"
+                                    },
                                     "origin": {
                                         "type": "string",
                                         "format": "string",
                                         "example": "East Asia"
-                                    },
-                                    "climate": {
-                                        "type": "string",
-                                        "format": "string",
-                                        "example": "Temperate"
-                                    },
-                                    "maintenance_rating": {
-                                        "type": "integer",
-                                        "format": "integer",
-                                        "example": "1"
                                     },
                                     "description": {
                                         "type": "string",
